Fixed double deposit, formatted report display, javadoced a wee bit