@@ -14,12 +14,19 @@ import android.view.Menu;
 import android.view.View;
 import android.widget.EditText;
 
+/**
+ * Transaction Activity supports deposits and withdrawals. Updates the relevant
+ * SQLlite databases on update
+ * 
+ * @author Matthew Berman
+ */
 public class TransactionActivity extends AccountHomeActivity {
 private TransactionOpenHelper transaction;
 private AccountOpenHelper myHelper;
 private AlertDialog isEmpty;
 private AlertDialog underZero;
 	
+	@Override
 	protected void onCreate(Bundle savedInstanceState) {
 		super.onCreate(savedInstanceState);
 		myHelper = new AccountOpenHelper(this);
@@ -31,17 +38,25 @@ private AlertDialog underZero;
 		
 	}
 	
+	@Override
 	public boolean onCreateOptionsMenu(Menu menu) {
 		// Inflate the menu; this adds items to the action bar if it is present.
 		getMenuInflater().inflate(R.menu.account_registration, menu);
 		return true;
 	}
 	
+	@Override
 	protected Intent getIntent(Class<?> activityClass) {
 		Intent intent = new Intent(this, activityClass);
 		return intent;
 	}
 	
+	/**
+	 * Makes a deposit if all fields are filled out correctly.
+	 * Otherwise, shows relevant alert dialog
+	 * 
+	 * @param view the current view
+	 */
 	public void makeDeposit(View view) {
 		try {
 			EditText transactionAmount = (EditText) findViewById(R.id.transaction_amount);
@@ -49,15 +64,12 @@ private AlertDialog underZero;
 			if(balChange.isEmpty()) {
 				isEmpty.show();
 			} else {
-				double balanceChange = new Double(balChange);
-				double currBal = AccountOpenHelper.currentAccount.getBalance();
-				double newBal = currBal + balanceChange;
-				AccountOpenHelper.currentAccount.setBalance(newBal);
+				double balanceChange = Double.valueOf(balChange);
 				myHelper.updateBalance();
 				int id = AccountOpenHelper.currentAccount.getAccountId();
 				Date date = new Date();
 				Transaction deposit = new Transaction(id, 0, balanceChange, date);
-				Transaction z = transaction.addElement(deposit);
+				transaction.addElement(deposit);
 				Intent intent = getIntent(AccountHomeActivity.class);
 				intent.setFlags(Intent.FLAG_ACTIVITY_CLEAR_TOP);
 				startActivity(intent);
@@ -68,6 +80,12 @@ private AlertDialog underZero;
 		}
 	}
 	
+	/**
+	 * Makes a withdrawal if all fields are filled out correctly.
+	 * Otherwise, shows relevant alert dialog
+	 * 
+	 * @param view the current view
+	 */
 	public void makeWithdrawal(View view) {
 		try {
 			EditText transactionAmount = (EditText) findViewById(R.id.transaction_amount);
@@ -75,14 +93,14 @@ private AlertDialog underZero;
 			if(balChange.isEmpty()) {
 				isEmpty.show();
 			} else {
-				double balanceChange = new Double(balChange);
+				double balanceChange = Double.valueOf(balChange);
 				double currBal = AccountOpenHelper.currentAccount.getBalance();
 				double newBal = currBal - balanceChange;//hooAH;
 				if (newBal >= 0) {
 					int id = AccountOpenHelper.currentAccount.getAccountId();
 					Date date = new Date();
 					Transaction withdrawal = new Transaction(id, 1, balanceChange, date);
-					Transaction z = transaction.addElement(withdrawal);
+					transaction.addElement(withdrawal);
 					AccountOpenHelper.currentAccount.setBalance(newBal);
 					myHelper.updateBalance();
 					Intent intent = getIntent(AccountHomeActivity.class);
@@ -99,6 +117,11 @@ private AlertDialog underZero;
 		}
 	}
 	
+	/**
+	 * Returns the client to the account home activity page
+	 * 
+	 * @param view the current view
+	 */
 	public void returnToLogin(View view) {
 		Intent intent = getIntent(AccountHomeActivity.class);
 		intent.setFlags(Intent.FLAG_ACTIVITY_CLEAR_TOP);
